Add new classes for lambda expressions and streams, including Apple, Trader, and Transaction